@startuml

package fr.ul.acl {

  class Laby
  
  class Resources {
    +{static}int WIDTH
    +{static}int HEIGHT
    +{static}int SCALING
    +{static}int scaling(int)
  }

}

package fr.ul.acl.model {
  class Jeu
}

package fr.ul.acl.engine {

  enum Cmd
  interface GameController 
  class GameEngineGraphical
  
  interface GamePainter {
    +void draw(BufferedImage)
  } 
  
}

package fr.ul.acl.view {

  class LabyPainter {
    -int width
    -int height
  }
  
}

package fr.ul.acl.controller {
  class LabyController
}

LabyPainter ..|> GamePainter
LabyPainter -- "1" Jeu
LabyController ..|> GameController
LabyController -- "1" Cmd
Laby --> GameEngineGraphical
Laby --> Jeu
Laby --> LabyPainter
Laby --> LabyController

hide empty members

@enduml